models and view 2 part

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div class="container">
-  <h1>
-    {{title}}
-  </h1>
+<div class="modal-body row">
+  <div class="col-md-6">
+    </p>First column here </p>
+  </div>
+  <div class="col-md-6">
+    <p>Second column here </p>
+  </div>
 </div>
