--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="modal-body row">
   <div class="col-md-6">
-    </p>First column here </p>
+<h1>{{title1}}</h1>
   </div>
   <div class="col-md-6">
-    <p>Second column here </p>
+<h1>{{title2}}</h1>
   </div>
 </div>
