--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,3 @@
-<div class="modal-body row">
-  <div class="col-md-6">
-<h1>{{title1}}</h1>
-  </div>
-  <div class="col-md-6">
-<h1>{{title2}}</h1>
-  </div>
-</div>
+<h1>
+  {{title}}
+</h1>
