book component test

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,8 @@
+<app-book></app-book>
+<br>
+<router-outlet></router-outlet>
+
+////////////////////////////////////////////////////////////////
 <div id="wrapper">
 <div id="left">
 <h1>{{leftTitle}}</h1>
