with access-control-allow-origin

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,7 +1,14 @@
-<app-book></app-book>
+<ul>
+  <li *ngFor="let book of books; let i = index">
+    {{i}} {{book}}
+  </li>
+</ul>
 <br>
-<router-outlet></router-outlet>
-
+<br>
+<br>
+<br>
+<br>
+<br>
 ////////////////////////////////////////////////////////////////
 <div id="wrapper">
 <div id="left">
