--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -9,10 +9,9 @@
 <br>
 <br>
 <br>
-////////////////////////////////////////////////////////////////
 <div id="wrapper">
 <div id="left">
-<h1>{{leftTitle}}</h1>
+<h1>Books List</h1>
 <!--////////////////////////////////////-->
 <div class="container">
   <table class="table table-condensed">
@@ -45,7 +44,7 @@
 <!--///////////////////////////////////////-->
 </div>
 <div id="right">
-<h1>{{rightTitle}}</h1>
+<h1>Favorite Books</h1>
 </div>
 </div>
 <style>
