server.js access controll

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -6,14 +6,11 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
 <div id="wrapper">
 <div id="left">
-<h1>Books List</h1>
+<h1 class = "title">Books List</h1>
 <!--////////////////////////////////////-->
-<div class="container">
+<div >
   <table class="table table-condensed">
     <thead>
       <tr>
@@ -24,19 +21,24 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
+        <td>Male</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
         <td></td>
+        <td>Raffi</td>
         <td></td>
-        <td>mary@example.com</td>
       </tr>
       <tr>
         <td></td>
-        <td>july@example.com</td>
         <td></td>
+        <td>Samvel</td>
+      </tr>
+            <tr>
+        <td></td>
+        <td></td>
+        <td>Khent</td>
       </tr>
     </tbody>
   </table>
@@ -44,13 +46,14 @@
 <!--///////////////////////////////////////-->
 </div>
 <div id="right">
-<h1>Favorite Books</h1>
+<h1 class="title">Favorite Books</h1>
 </div>
 </div>
 <style>
 #wrapper {width: 100%; margin: auto;}
 #left { width: 60%; float: left;}
 #right { width: 40%; float: right}
+.title {   text-align:center;}
 </style>
 
 
